fix(a11y): add more contrast to sidebar links

--- a/src/css/_includes/sidebar.scss
+++ b/src/css/_includes/sidebar.scss
@@ -106,7 +106,7 @@
     line-height: 1.5;
     display: block;
     border-radius: 0.125em;
-    color: $desatPurple6;
+    color: $desatPurple3;
     padding: 0.25em 0;
     opacity: 0.8;
     text-decoration: none;
